--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -24,16 +24,16 @@ ja:
   # Models
   models:
     # Shared translations
-    required: 'required'
-    name_in_use: 'name already in use'
+    required: '必要'
+    name_in_use: '名前はすでに使用されています'
     slug_in_use: 'slug already in use for child of parent'
-    character_limit: '{{count}}-character limit'
-    character_minimum: '{{count}}-character minimum'
+    character_limit: '制限{{count}}字'
+    character_minimum: '{{count}}字以上'
     must_be_number: 'must be a number'
     invalid_format: 'invalid format'
     no_spaces_tabs: 'cannot contain spaces or tabs'
     # User
-    login_in_use: 'login already in use'
+    login_in_use: 'ログインはすでに使用されています'
     password_confirmation: 'must match confirmation'
     invalid_email: 'invalid e-mail address'  
   
@@ -42,8 +42,8 @@ ja:
       modify: '変更'
       more: '拡大'
       less: 'less'
-      body: 'Body'  
-      name: 'Name'
+      body: 'Body'
+      name: '名前'
       filter: 'フィルター'
       cancel: '取り消す'
       or: 'それとも'
@@ -58,49 +58,49 @@ ja:
       users: 'ユーザー'
       extensions: 'エクステンション'
       log_out: 'ログアウト'
-      preferences: 'Preferences' 
-      view_site: 'View Site'
-      log_out: 'Log out'
+      preferences: '設定' 
+      view_site: 'サイトを見る'
+      log_out: 'ログアウト'
     layouts:
       layouts: 'レイアウト'
       layout: 'レイアウト'
       description: 'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include page content and other elements such as the header or footer. Click on a layout name below to edit it or click <code>Remove</code> to delete it.'
       new_layout: 'New Layout'    
-      edit_layout: 'Edit Layout'
+      edit_layout: 'レイアウト編集'
       content_type: 'Content&#8209;Type'    
-      remove_layout: 'Remove Layout' 
-      delete_layout: 'Delete Layout'  
+      remove_layout: 'レイアウト除ける' 
+      delete_layout: 'レイアウト削除'  
       remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following layout?'
     page_parts:
       available_tags: '使用可能タッグ'
       reference: 'ヘルプ'
     pages:
       pages: 'ページ'
-      page: 'Page'
+      page: 'ページ'
       new_page: 'New Page'
       edit_page: 'ページ編集'
       page_title: 'タイトル'
-      remove_tab: 'Remove Tab'  
-      add_tab: 'Add Tab'
+      remove_tab: 'タッブ°除ける'  
+      add_tab: 'タッブ追加'
       status: 'ステータス'
       page_type: 'タイプ'
       published_at: 'Published at' 
-      close: 'Close'
-      no_pages: 'No Pages' 
-      delete_pages: 'Delete {{pages}}'  
-      remove_pages: 'Remove {{pages}}' 
+      close: '閉める'
+      no_pages: 'ページがない' 
+      delete_pages: '{{pages}}削除'  
+      remove_pages: '{{pages}}を除ける' 
       remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following {{pages}}?'
       available_tags_for: 'Available Tags for'
-      search_tags: 'Search Tags:'
-      add_part: 'Add Part'
+      search_tags: 'タッグ検索:'
+      add_part: 'パーツ追加'
     snippets:
       snippets: 'スニペッツ'
       snippet: 'スニペッツ'
       new_snippet: 'New Snippet'
-      edit_snippet: 'Edit Snippet'
+      edit_snippet: 'スニペッツ編集'
       description: 'Snippets are generally small pieces of content which are included in other pages or layouts.'
       remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following snippet?'
-      delete_snippet: 'Delete Snippet'
+      delete_snippet: 'スニペッツ削除'
     users:
       user: 'ユーザー'
       users: 'ユーザー'
@@ -111,21 +111,21 @@ ja:
       roles: '役目'
       admin: 'Administrator' 
       developer: 'Developer'
-      language: 'Language'
-      notes: 'Notes'    
+      language: '言語'
+      notes: 'ノート'    
       optional: 'Optional'
-      required: 'Required'  
+      required: '必要'  
       valid_email: 'Please use a valid e-mail address.' 
       valid_login: 'At least 3 characters. Must be unique.'
-      valid_password: 'At least 5 characters.'
+      valid_password: '５字以上'
       leave_password_unchanged: 'Leave password blank for it to remain unchanged.'
       password_confirmation: 'Confirm Password'
       roles_description: 'Roles restrict user privileges and turn parts of the administrative interface on or off.' 
       language_description: 'The preferred language for the Admin interface.' 
       remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following user?' 
-      delete_user: 'Delete User'
+      delete_user: 'ユーザー削除'
     preferences:
-      user_preferences: 'User Preferences'
+      user_preferences: 'ユーザー設定'
     welcome:
       login: 'ログイン'
       login_btn: 'ログイン'
@@ -164,8 +164,8 @@ ja:
   
     # Standard Tag Descriptions
   tag_desc:
-    usage: 'Usage'
-    produces: 'produces'
+    usage: '使い方'
+    produces: '結果'
 
     page:
       desc: "Causes the tags referring to a page's attributes to refer to the current page."
