--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,48 +1,48 @@
-ja: 
+ja:
   # The display name of this language file
   this_file_language: "日本語"
-  
+
   # Controllers
   resource_controller:
     saved: "{{humanized_model_name}}をセーブしました。"
     validation_errors: "DE Validation errors occurred while processing this form. Please take a moment to review the form and correct any input errors before continuing."
-    removed: "{{humanized_model_name}}を削除しました。."  
-    update_conflict: "ロードした時と比べて、{{humanized_model_name}}に変更があります。セーブしたら、ほかに変更を失う可能性があります。" 
+    removed: "{{humanized_model_name}}を削除しました。."
+    update_conflict: "ロードした時と比べて、{{humanized_model_name}}に変更があります。セーブしたら、ほかに変更を失う可能性があります。"
   pages_controller:
-    saved: "ページをセーブしました。"  
-    removed_many: "ページはサイトから削除しました。"   
-    removed_one: "ページはサイトから削除しました。"  
+    saved: "ページをセーブしました。"
+    removed_many: "ページはサイトから削除しました。"
+    removed_one: "ページはサイトから削除しました。"
   preferences_contoller:
-    updated: '設定変更に終了しました。' 
-    error_updating: '設定変更にエーラーが発生しました。'      
+    updated: '設定変更に終了しました。'
+    error_updating: '設定変更にエーラーが発生しました。'
   users_controller:
-    cannot_delete_self: '自分を削除できません。'    
+    cannot_delete_self: '自分を削除できません。'
   welcome_controller:
-    logged_out: 'ログアウトしました。'  
-    invalid_user: 'ログインもしくはパスワードが異なりますん。' 
-  
+    logged_out: 'ログアウトしました。'
+    invalid_user: 'ログインもしくはパスワードが異なります。'
+
   # Models
   models:
     # Shared translations
     required: '必要'
     name_in_use: '名前はすでに使用されています'
-    slug_in_use: 'slug already in use for child of parent'
+    slug_in_use: 'スラグははすでに親の子として使用されています'
     character_limit: '制限{{count}}字'
     character_minimum: '{{count}}字以上'
-    must_be_number: 'must be a number'
-    invalid_format: 'invalid format'
-    no_spaces_tabs: 'cannot contain spaces or tabs'
+    must_be_number: '数値である必要があります'
+    invalid_format: 'フォーマットが異なります'
+    no_spaces_tabs: 'スペースもしくはタブは入力できません'
     # User
     login_in_use: 'ログインはすでに使用されています'
-    password_confirmation: 'must match confirmation'
-    invalid_email: 'invalid e-mail address'  
-  
+    password_confirmation: 'パスワードはパスワード確認と一致する必要があります'
+    invalid_email: 'Eメールが不正です'
+
   views:
     shared:
       modify: '変更'
       more: '拡大'
-      less: 'less'
-      body: 'Body'
+      less: '縮小'
+      body: '文体'
       name: '名前'
       filter: 'フィルター'
       cancel: '取り消す'
@@ -58,48 +58,48 @@ ja:
       users: 'ユーザー'
       extensions: 'エクステンション'
       log_out: 'ログアウト'
-      preferences: '設定' 
+      preferences: '設定'
       view_site: 'サイトを見る'
       log_out: 'ログアウト'
     layouts:
       layouts: 'レイアウト'
       layout: 'レイアウト'
-      description: 'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include page content and other elements such as the header or footer. Click on a layout name below to edit it or click <code>Remove</code> to delete it.'
-      new_layout: 'New Layout'    
+      description: 'Webページに見た目を適用するためレイアウトを使用します。レイアウトにはページを読み込んだり、他のヘッダーやフッターなどの要素を読み込む特別のタグを使用する事ができます。以下のレイアウト名をクリックして編集するか、<code>Remove</code>をクリックして削除します。'
+      new_layout: '新規レイアウト'
       edit_layout: 'レイアウト編集'
-      content_type: 'Content&#8209;Type'    
-      remove_layout: 'レイアウト除ける' 
-      delete_layout: 'レイアウト削除'  
-      remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following layout?'
+      content_type: 'コンテンツ&#8209;タイプ'
+      remove_layout: 'レイアウト除ける'
+      delete_layout: 'レイアウト削除'
+      remove_warning_text: '本当に下記のレイアウトを<strong class="warning">永久に削除</strong>してよろしいでしょうか?'
     page_parts:
-      available_tags: '使用可能タッグ'
+      available_tags: '使用可能タグ'
       reference: 'ヘルプ'
     pages:
       pages: 'ページ'
       page: 'ページ'
-      new_page: 'New Page'
+      new_page: '新規ページ'
       edit_page: 'ページ編集'
       page_title: 'タイトル'
-      remove_tab: 'タッブ°除ける'  
+      remove_tab: 'タッブ°除ける'
       add_tab: 'タッブ追加'
       status: 'ステータス'
       page_type: 'タイプ'
-      published_at: 'Published at' 
+      published_at: '発行日：'
       close: '閉める'
-      no_pages: 'ページがない' 
-      delete_pages: '{{pages}}削除'  
-      remove_pages: '{{pages}}を除ける' 
-      remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following {{pages}}?'
-      available_tags_for: 'Available Tags for'
+      no_pages: 'ページがない'
+      delete_pages: '{{pages}}削除'
+      remove_pages: '{{pages}}を除ける'
+      remove_warning_text: '本当に下記の{{pages}}を<strong class="warning">永久に削除</strong>してよろしいでしょうか?'
+      available_tags_for: '使用可能なタグ'
       search_tags: 'タッグ検索:'
       add_part: 'パーツ追加'
     snippets:
       snippets: 'スニペッツ'
       snippet: 'スニペッツ'
-      new_snippet: 'New Snippet'
+      new_snippet: '新規スニペッツ'
       edit_snippet: 'スニペッツ編集'
-      description: 'Snippets are generally small pieces of content which are included in other pages or layouts.'
-      remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following snippet?'
+      description: 'スニペッツはたいてい他のページもしくはレイアウトに読み込むためのコンテンツ要素になります。'
+      remove_warning_text: '本当に下記のスニペッツを<strong class="warning">永久に削除</strong>してよろしいでしょうか?'
       delete_snippet: 'スニペッツ削除'
     users:
       user: 'ユーザー'
@@ -109,20 +109,20 @@ ja:
       name: '名前'
       login: 'ログイン'
       roles: '役目'
-      admin: 'Administrator' 
-      developer: 'Developer'
+      admin: '管理者'
+      developer: '開発者'
       language: '言語'
-      notes: 'ノート'    
-      optional: 'Optional'
-      required: '必要'  
-      valid_email: 'Please use a valid e-mail address.' 
-      valid_login: 'At least 3 characters. Must be unique.'
-      valid_password: '５字以上'
-      leave_password_unchanged: 'Leave password blank for it to remain unchanged.'
-      password_confirmation: 'Confirm Password'
-      roles_description: 'Roles restrict user privileges and turn parts of the administrative interface on or off.' 
-      language_description: 'The preferred language for the Admin interface.' 
-      remove_warning_text: 'Are you sure you want to <strong class="warning">permanently remove</strong> the following user?' 
+      notes: 'ノート'
+      optional: 'オプション'
+      required: '必要'
+      valid_email: '有効なEメールアドレスを使用して下さい。'
+      valid_login: '最低でも3桁入力して下さい。一意である必要があります。'
+      valid_password: '5文字以上入力して下さい。'
+      leave_password_unchanged: '変更しない場合はパスワードを入力しないで下さい。'
+      password_confirmation: 'パスワードの確認を入力して下さい。'
+      roles_description: '役割はユーザの権限と管理画面への接続の制限をします。'
+      language_description: '管理画面の言語を選択して下さい。'
+      remove_warning_text: '本当に下記のユーザを<strong class="warning">永久に削除</strong>しますか?'
       delete_user: 'ユーザー削除'
     preferences:
       user_preferences: 'ユーザー設定'
@@ -130,38 +130,38 @@ ja:
       login: 'ログイン'
       login_btn: 'ログイン'
       remember_me: '次回から自動的にログイン'
- 
+
   # Page status
   status:
     draft: '下書き'
     reviewed: '編集中'
     hidden: '隠し'
     published: '出版'
-  
+
   # Buttons
   buttons:
     save_changes: 'セーブ'
     save_and_continue: 'セーブして続く'
-    create: 'Create {{name}}'
-    
+    create: '{{name}}作成'
+
   # Select lists
   select:
     none: 'なし'
     normal: '普通'
     inherit: '<inherit>'
-    
+
   # Main Navigation Tags
-  tabs: 
-    pages: 'ページ'  
+  tabs:
+    pages: 'ページ'
     snippets: 'スニペッツ'
     layouts: 'レイアウト'
-    
+
   # Timestamp. This may need to be changed as it will most likely not work for many languages.
   timestamp:
-    last_updated: 'Last Updated'
-    by: 'by'
-    at: 'at'
-  
+    last_updated: '最終更新日'
+    by: '変更者：'
+    at: '日時：'
+
     # Standard Tag Descriptions
   tag_desc:
     usage: '使い方'
@@ -172,16 +172,16 @@ ja:
       attributes: 'Renders the @{{method}}@ attribute of the current page.'
       url: 'Renders the @url@ attribute of the current page.'
 
-    children: 
+    children:
       desc: "Gives access to a page's children."
       count: 'Renders the total number of children.'
-      first: 'Returns the first child. Inside this tag all page attribute tags are mapped to the first child. <br /> 
-        Takes the same ordering options as @<r:children:each>@.'    
-      last: 'Returns the last child. Inside this tag all page attribute tags are mapped tothe last child. <br /> 
+      first: 'Returns the first child. Inside this tag all page attribute tags are mapped to the first child. <br />
+        Takes the same ordering options as @<r:children:each>@.'
+      last: 'Returns the last child. Inside this tag all page attribute tags are mapped tothe last child. <br />
         Takes the same ordering options as @<r:children:each>@.›'
       each: "Cycles through each of the children. Inside this tag all page attribute tags are mapped to the current child page."
-      child: "Page attribute tags inside of this tag refer to the current child. This is occasionally <br /> 
-        useful if you are inside of another tag (like &lt;r:find&gt;) and need to refer back to the <br /> current child."  
+      child: "Page attribute tags inside of this tag refer to the current child. This is occasionally <br />
+        useful if you are inside of another tag (like &lt;r:find&gt;) and need to refer back to the <br /> current child."
       if_first: "Renders the tag contents only if the current page is the first child in the context of a children:each tag"
       unless_first: "Renders the tag contents unless the current page is the first child in the context of a children:each tag"
       if_last: "Renders the tag contents unless the current page is the last child in the context of a children:each tag"
@@ -244,7 +244,7 @@ ja:
     if_self:
       part_1: "Renders the contained elements if the current contextual page is also the actual page."
       part_2: "This is typically used inside another tag (like &lt;r:children:each&gt;) to add conditional mark-up if the child element is the current page."
-    unless_self: 
+    unless_self:
       part_1: "Renders the contained elements unless the current contextual page is also the actual page."
       part_2: "This is typically used inside another tag (like &lt;r:children:each&gt;) to add conditional mark-up unless the child element is the current page."
 
@@ -268,7 +268,7 @@ ja:
       specifies the HTML fragment that is inserted between each of the breadcrumbs. By
       default it is set to @>@. The boolean nolinks attribute can be specified to render
       breadcrumbs in plain text, without any links (useful when generating title tag)."
-    snippet: 
+    snippet:
       part_1: "Renders the snippet specified in the @name@ attribute within the context of a page."
       part_2: "When used as a double tag, the part in between both tags may be used within the snippet itself, being substituted in place of @<r:yield/>@."
 
@@ -323,32 +323,32 @@ ja:
       desc: "Filters its contents with the SmartyPants filter."
     textile:
       desc: "Filters its contents with the Textile filter."
-    
+
   date:
     formats:
       default: "%Y年%m月%d日"
       short: "%e %b"
       long: "%B %e, %Y"
       only_day: "%e"
- 
+
     day_names: [日曜, 月曜, 火曜, 水曜, 木曜, 金曜, 土曜]
     abbr_day_names: [日, 月, 火, 水, 木, 金, 土]
-    month_names: [~, 一月, 二月, 三月, 四月, 五月, 六月, 七月, 八月, 九月, 十月, 十一月, 十二月]   
+    month_names: [~, 一月, 二月, 三月, 四月, 五月, 六月, 七月, 八月, 九月, 十月, 十一月, 十二月]
     abbr_month_names: [~, 一月, 二月, 三月, 四月, 五月, 六月, 七月, 八月, 九月, 十月, 十一月, 十二月]
     order: [ :year, :month, :day ]
-  
+
   time:
     formats:
-      default: "%a %b %d %H:%M:%S %Z %Y"   
-      timestamp: "%H:%M <small>%p</small>、 %Y年%m月%d日" 
+      default: "%a %b %d %H:%M:%S %Z %Y"
+      timestamp: "%H:%M <small>%p</small>、 %Y年%m月%d日"
       time: "%H:%M"
       short: "%d %b %H:%M"
       long: "%B %d, %Y %H:%M"
       only_second: "%S"
-      
+
       datetime:
         formats:
           default: "%Y-%m-%dT%H:%M:%S%Z"
-          
+
     am: '午前'
     pm: '午後'
